--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>a62f6236-0b02-4e5f-a8eb-dc5e37aedb12</groupId>
 	<artifactId>health_check</artifactId>
-	<version>1.0.25</version>
+	<version>1.0.15</version>
 	<packaging>mule-application</packaging>
 
-	<name>health_check</name>
+	<name>healthcheck</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,14 +36,31 @@
 					<cloudhub2Deployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<provider>MC</provider>
-						<environment>Sandbox</environment>
-						<target>CloudHub 2.0</target>
-						<muleVersion>4.4.0</muleVersion>
-						<username>${user}</username>
-						<password>${pass}</password>
-						<applicationName>${appName}</applicationName>
+						<muleVersion>4.9.6</muleVersion>
+						<server>anypoint-exchange-v3</server>
+						<connectedAppClientId>${anypoint.username}</connectedAppClientId>
+						<connectedAppClientSecret>${anypoint.password}</connectedAppClientSecret>
+						<connectedAppGrantType>client_credentials</connectedAppGrantType>
+						<businessGroupId>${anypoint.businessGroup}</businessGroupId>
+						<environment>${env}</environment>
+						<target>DemoSpace</target>
+						<applicationName>${appname}</applicationName>
 						<replicas>1</replicas>
-						<vCores>1</vCores>
+						<vCores>0.1</vCores>
+						<deploymentSettings>
+        						<http>
+            							<inbound>
+                							<publicUrl>https://deploy-cloudhub2.sirichat.com</publicUrl>
+            							</inbound>
+        						</http>
+        						<lastMileSecurity>false</lastMileSecurity>
+        						<forwardSslSession>false</forwardSslSession>
+        						<generateDefaultPublicUrl>false</generateDefaultPublicUrl>
+    						</deploymentSettings>
+						<properties>
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+						</properties>
 					</cloudhub2Deployment>
 				</configuration>
 			</plugin>
@@ -66,9 +83,9 @@
 	</dependencies>
 	<distributionManagement>
 		<repository>
-			<id>Repository</id>
+			<id>anypoint-exchange-v3</id>
 			<name>Corporate Repository</name>
-			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/8724f8e5-1e57-4b90-97eb-9eb4a3f0e4d0/maven</url>
+			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
 			<layout>default</layout>
 		</repository>
 	</distributionManagement>
@@ -96,7 +113,7 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</pluginRepository>
+		</pluginRepository>	
 	</pluginRepositories>
 
 </project>
