--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ on:
  
 jobs:
   call-workflow:
-    uses: saichannel/pipeline/.github/workflows/pipeline.yml@main
+    uses: Indrajith045/pipeline/.github/workflows/pipeline.yml@main
     secrets: inherit
