--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>a62f6236-0b02-4e5f-a8eb-dc5e37aedb12</groupId>
 	<artifactId>cozzini</artifactId>
-	<version>1.0.8</version>
+	<version>1.0.9</version>
 	<packaging>mule-application</packaging>
 
 	<name>cozzini</name>
@@ -50,7 +50,7 @@
 						<deploymentSettings>
         						<http>
             							<inbound>
-                							<publicUrl>https://deploy-cloudhub2.sirichat.com</publicUrl>
+                							<publicUrl>https://${appname}.sirichat.com</publicUrl>
             							</inbound>
         						</http>
         						<lastMileSecurity>false</lastMileSecurity>
